# libxevd

./: .gitmodules  BUILD.gn  README.md  build.gni  options.gni  xevd_base_sources.gni  xevd_main_sources.gni
source/config/linux/arm64/config/: xevd_exports.h
